💄[#2835] Fix alignment and horizontal spacing
.aligned specificity makes the !important necessary

Moved button inside the DSLEditorNode, both because it's logically part
of the node and it fixes vertical alignment of the text.

--- a/src/openforms/scss/components/admin/_dsl-editor.scss
+++ b/src/openforms/scss/components/admin/_dsl-editor.scss
@@ -17,6 +17,17 @@
       max-width: 30em;
     }
 
+    label {
+      display: inline !important;
+      float: none !important;
+      padding: 0 0.5em 0 0 !important;
+    }
+
+    input[type='submit'] {
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+    }
+
     &--errors {
       input,
       select,
